<resources>
    <string name="app_name">Price Master</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_city">Выбор города</string>
    <string name="menu_catalog">Каталог</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О нас</string>
    <string name="menu_underCatalog">Подкаталог</string>
    <string-array name="sort_list">
        <item>По цене</item>
        <item>По названию</item>
    </string-array>
</resources>
