<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_city"
        android:name="com.example.mc.ui.city.CityFragment"
        android:label="@string/menu_city"
        tools:layout="@layout/fragment_city" />

    <fragment
        android:id="@+id/nav_catalog"
        android:name="com.example.mc.ui.catalog.CatalogFragment"
        android:label="@string/menu_catalog"
        tools:layout="@layout/fragment_catalog" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mc.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.mc.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_underсatalog"
        android:name="com.example.mc.ui.underCatalog.UnderCatalogFragment"
        android:label="@string/menu_underCatalog"
        tools:layout="@layout/fragment_undercatalog" />
</navigation>